v5 more skills work

--- a/app/public/style.css
+++ b/app/public/style.css
@@ -114,13 +114,13 @@ p.user-name {
 }
 
 .skillbox {
-	width: 15%;
-	padding: 3px;
+	padding: 3px 6px;
+	margin-left: 3px;
 	border: 1px solid lightgrey;
 }
 
 .skill-delete {
-	float: right;
+	margin-left: 5px;
 }
 
 datalist { 
