v10 refine url inputs, themes work

--- a/themes/default/home.pug
+++ b/themes/default/home.pug
@@ -5,11 +5,21 @@ html(lang='en')
         meta(charset='utf-8') 
 
     body
-        section(class='account-header')
-            h4 Welcome! This is the home page
-            p Title: #{title}
+        section(class='page-header')
+            h2 Welcome! This is the default home page
+            h4 Title: #{title}
             p Url: #{friendlyUrl}
             p Content: #{content}
 
-        section
-
+        section(id='nav')
+            - var homeUrl = 'http://localhost:8080/default/home/' + friendlyUrl;
+            a(class='nav-link', href= homeUrl )
+                span Home
+            a(class='nav-link', href='http://localhost:8080/default/about/about')
+                span About
+            a(class='nav-link', href='http://localhost:8080/default/portfolio/portfolio')
+                span Portfolio
+            a(class='nav-link')
+                span Contact
+        section(id='section-content')
+        block content
