--- a/themes/default/about.pug
+++ b/themes/default/about.pug
@@ -1,5 +1,5 @@
-extends home
+extends home.pug
 block content
-    h4 Title: #{title}
-    p Url: #{friendlyUrl}
-    p Content: #{content}
+    h4 #{aboutTitle}
+    p Url: #{aboutUrl}
+    p #{aboutContent}
