--- a/themes/default/portfolio.pug
+++ b/themes/default/portfolio.pug
@@ -1,21 +1,13 @@
-extends home
+extends home.pug
 block content
-    h4 Projects
+    div
+        h3 #{portfolioTitle}
+        p #{portfolioContent}
     each project in projects
         div(class='project-item')
             p Name: 
                 span= project.name
-            p Url: 
-                span= project.friendlyUrl
-            p Image link: 
-                span= project.image
-            p Live link: 
-                span= project.livelink
-            p Code Url: 
-                span= project.codeUrl
-            p Description: 
-                span= project.description
-            ul
+            div(class='skill-box')
                 each skill in project.skills
-                    li= skill 
+                    span(class='skill')= skill 
 
