--- a/views/index.pug
+++ b/views/index.pug
@@ -6,12 +6,12 @@ html(lang='en')
         include style
     
     body
-        h1 This is the welcome page
-        section
-            h3 This page is produced by Jade engine
-            p Have an account? 
+        section.index
+            h3 This is a Content Management Site
+            p Log in and start creating your page
+            p Already have an account? 
                 a(class='login', href='/login') Log in here
-        section
-            p Create your account 
+            p Create your account. 
                 a(class='signup', href='/signup') Sign up here
+            
         include scripts
