--- a/app/public/default-style.css
+++ b/app/public/default-style.css
@@ -11,21 +11,24 @@ body {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
     background-position: top left;
-    color: #2D2A32;
 }
 
 section {
 	background-color: ;
 }
 
+.hidden {
+	display: none;
+}
+
 #default-box {
 	position: absolute;
 	min-height: 300px;
-	width: 94%;
+	width: 100%;
 	top: 15%;
-	left: 2%;
-	padding: 5px 15px;
-	background-color: rgba(255,255,255,0.6);
+	left: 0;
+	padding: 15px 45px;
+	background-color: rgba(255,255,255,0.75);
 }
 
 #nav {
@@ -36,7 +39,7 @@ a.nav-link, .project-item, .skill {
 	display: inline-block;
 }
 
-a.nav-link {
+a.nav-link, button#project-close {
 	height: 30px;
 	padding: 5px 15px;
 	margin: 1px 1px;
@@ -46,26 +49,35 @@ a.nav-link {
 	border-radius: 4px;
 }
 
-a.nav-link:hover {
+button#project-close {
+	display: block;
+	margin: auto;
+	margin-top: 20px;
+	border: 0px;
+	font-size: 1em;
+}
+
+a.nav-link:hover, button#project-close:hover {
 	color: white;
 	background-color: #C0FF3E;
 }
 
 div.project-item {
-	border: 1px solid lightgrey;
+	background-color: white;
 	width: 30%;
 	min-height: 85px;
 	vertical-align: top;
 	padding: 9px;
-	margin: 1px 6px;
+	margin: 3px 6px;
 }
 
-div.project-item p {
-	margin: 1px;
+div.project-item p, #single-project p {
+	margin: 5px;
 }
 
 .skill {
-	padding: 2px 8px;
+	border-radius: 3px;
+	padding: 3px 10px;
 	margin: 1px 2px;
 	color: black;
 	background-color: #B3EE3A;
@@ -74,4 +86,28 @@ div.project-item p {
 div.project-item:hover {
 	background-color: #778899;
 	color: white;
+	-webkit-box-shadow: 2px 2px 10px 0px rgba(50, 50, 50, 0.74);
+	-moz-box-shadow:    2px 2px 10px 0px rgba(50, 50, 50, 0.74);
+	box-shadow:         2px 2px 10px 0px rgba(50, 50, 50, 0.74);
+}
+
+#single-project {
+	background-color: white;
+	position: absolute;
+	top: 160px;
+	left: 23%;
+	width: 50%;
+	padding: 15px 20px;
+	-webkit-box-shadow: 4px 4px 25px 0px rgba(50, 50, 50, 1);
+	-moz-box-shadow:    4px 4px 25px 0px rgba(50, 50, 50, 1);
+	box-shadow:         4px 4px 25px 0px rgba(50, 50, 50, 1);
+}
+
+.grey-out {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.5);
 }
