--- a/themes/default/home.pug
+++ b/themes/default/home.pug
@@ -8,11 +8,11 @@ html(lang='en')
     body
         section(id='nav')
             - var homeUrl = 'http://localhost:8080/default/home/' + friendlyUrl;
-            a(class='nav-link', href= 'http://localhost:8080/default/home/home' )
+            a(class='nav-link', href= 'http://localhost:8080/home/home' )
                 div(class='nav-link') Home
-            a(class='nav-link', href='http://localhost:8080/default/about/about')
+            a(class='nav-link', href='http://localhost:8080/about/about')
                 div(class='nav-link') About
-            a(class='nav-link', href='http://localhost:8080/default/portfolio/portfolio')
+            a(class='nav-link', href='http://localhost:8080/portfolio/portfolio')
                 div(class='nav-link') Portfolio
             a(class='nav-link')
                 div(class='nav-link') Contact
