--- a/views/components.pug
+++ b/views/components.pug
@@ -4,4 +4,5 @@ script(type='text/babel', src='/components/admin-home.js')
 script(type='text/babel', src='/components/admin-pages.js')
 script(type='text/babel', src='/components/admin-projects.js')
 script(type='text/babel', src='/components/admin-skills.js')
+script(type='text/babel', src='/components/admin-themes.js')
 
