--- a/themes/default/about.pug
+++ b/themes/default/about.pug
@@ -1,5 +1,5 @@
 extends home.pug
 block content
     div(class='about')
-        h4 #{aboutTitle}
-        p #{aboutContent}
+        h4 #{title}
+        p #{content}
