--- a/app/public/style.css
+++ b/app/public/style.css
@@ -9,13 +9,13 @@ body {
 	font-family: Arial, sans-serif;
 }
 
-section, .page, .project {
+section, .page, .project, .user {
 	border: 1px solid lightgrey;
 }
 
 .other-login-button, .account-header, .account-header>p, 
 .account-header>h4, #left-menu, #right-view, .page, .project,
-.skillbox, .skill-text, .skill-delete, label {
+.user, .skillbox, .skill-text, .skill-delete, label {
 	display: inline-block;
 }
 
@@ -124,7 +124,7 @@ li, button {
 	margin: 0px;
 }
 
-.page>h4, .project>h4 {
+.page>h4, .project>h4, .user>h4{
 	margin: 2px;
 }
 
@@ -133,11 +133,11 @@ li, button {
 	margin-bottom: 15px;
 }
 
-.admin-home-box, .pages-view, .projects-view, .skills-view, .themes-view {
+.admin-home-box, .pages-view, .projects-view, .skills-view, .users-view {
 	text-align: center;
 }
 
-.admin-home-text, .createpage-view, .createproject-view, .project, .page {
+.admin-home-text, .createpage-view, .createproject-view, .createuser-view, .project, .page, .user {
 	text-align: left;
 }
 
@@ -195,7 +195,7 @@ label {
 }
 
 textarea, input {
-	width: 225px;
+	width: 275px;
 }
 
 input {
@@ -219,7 +219,7 @@ li:hover, button:hover {
 
 }
 
-.page, .project {
+.page, .project, .user {
 	width: 47%;
 	vertical-align: top;
 	padding: 15px;
@@ -227,18 +227,23 @@ li:hover, button:hover {
 }
 
 
-.page:hover, .project:hover {
+.page:hover, .project:hover, .user:hover {
 	-webkit-box-shadow: 2px 2px 10px 0px rgba(50, 50, 50, 0.74);
 	-moz-box-shadow:    2px 2px 10px 0px rgba(50, 50, 50, 0.74);
 	box-shadow:         2px 2px 10px 0px rgba(50, 50, 50, 0.74);
 }
 
-.page-buttons, .project-buttons {
+.page-buttons, .project-buttons, .user-buttons {
 	margin-top: 8px;
 }
 
-.page>p, .project>p {
+.page>p, .project>p, .user>p {
+	font-size: 15px;
 	margin: 1px 4px;
+}
+
+.text-label {
+	font-weight: bold;
 }
 
 .grey-out {
@@ -305,7 +310,7 @@ button:hover, .skill-delete:hover {
 }
 
 
-@media only screen and (max-width: 584px) {
+@media only screen and (max-width: 674px) {
     
     #left-menu {
         width: 100%;
@@ -324,7 +329,19 @@ button:hover, .skill-delete:hover {
     	width: 100%;
     }
 
-    .page, .project {
+    .page, .project, .user, .box {
     	width: 90%;
+    }
+
+    .box {
+    	left: 3%;
+    }
+
+    .form-section {
+    	width: 100%;
+    }
+
+    input, textarea {
+    	width: 80%;
     }
 }
