--- a/themes/default/portfolio.pug
+++ b/themes/default/portfolio.pug
@@ -1,29 +1,30 @@
 extends home.pug
 block content
     div(id='portfolio-box')
-        h3 #{portfolioTitle}
+        h3 #{title}
         div(id='project-container')
-            p #{portfolioContent}
+            p #{content}
             each project in projects
                 div(class='project-item', data-name= project.name, data-url= project.friendlyUrl, data-img= project.image, data-livelink= project.livelink, data-codeurl= project.codeUrl, data-desc= project.description, data-skills = project.skills)
-                    p Name: 
-                        span= project.name
+                    img(src='/public/default/page.png' )
+                    p(class='project-name')= project.name
                     div(class='skill-box')
                         each skill in project.skills
                             span(class='skill')= skill 
         div(class='grey-out hidden')
-            div(id='single-project', class='hidden')
-                img(src='/public/default/page.png')
-                p(id='proj-name') Project Name: 
-                    span
-                p
-                    a(id='proj-livelink') 
-                        span Live Site 
-                    span | 
-                    a(id='proj-codeurl') 
-                        span Code Site
-                p(id='proj-desc') Description: 
-                    span
-                p Skills:
-                div(id='proj-skill-box')
-                button(type='button', id='project-close') Close
+        div(id='single-project', class='hidden')
+            img(src='/public/default/page.png' )
+            p(id='proj-name') Project Name: 
+                span
+            p
+                a(id='proj-livelink') 
+                    span Live Site 
+                span | 
+                a(id='proj-codeurl') 
+                    span Code Site
+            p(id='proj-desc') Description: 
+                br
+                span
+            p Skills:
+            div(id='proj-skill-box')
+            button(type='button', id='project-close') Close
