--- a/app/public/style.css
+++ b/app/public/style.css
@@ -9,13 +9,13 @@ body {
 	font-family: Arial, sans-serif;
 }
 
-section, .page, .project, .user {
+section, .page, .project, .user, .optionbox, .theme {
 	border: 1px solid lightgrey;
 }
 
 .other-login-button, .account-header, .account-header>p, 
 .account-header>h4, #left-menu, #right-view, .page, .project,
-.user, .skillbox, .skill-text, .skill-delete, label {
+.user, .skillbox, .skill-text, .skill-delete, .theme, label {
 	display: inline-block;
 }
 
@@ -101,7 +101,7 @@ ul {
 
 li {
 	color: white;
-	width: 77%;
+	width: 79%;
 	margin: 6px 0px;
 	padding: 7px;
 }
@@ -124,7 +124,7 @@ li, button {
 	margin: 0px;
 }
 
-.page>h4, .project>h4, .user>h4{
+.page>h4, .project>h4, .user>h4, .options-view>h4, .options-view>h3 {
 	margin: 2px;
 }
 
@@ -133,11 +133,14 @@ li, button {
 	margin-bottom: 15px;
 }
 
-.admin-home-box, .pages-view, .projects-view, .skills-view, .users-view {
+.admin-home-box, .pages-view, .projects-view, .skills-view, 
+.users-view, .options-view {
 	text-align: center;
 }
 
-.admin-home-text, .createpage-view, .createproject-view, .createuser-view, .project, .page, .user {
+.admin-home-text, .createpage-view, .createproject-view, 
+.createuser-view, .project, .page, .user, .optionbox, 
+#newoption-form, .theme {
 	text-align: left;
 }
 
@@ -183,6 +186,11 @@ p.user-name {
 	margin: 4px 0px;
 }
 
+#newoption-form {
+	width: 80%;
+	margin: 10px auto;
+}
+
 label {
 	width: 109px;
 	vertical-align: top;
@@ -219,15 +227,31 @@ li:hover, button:hover {
 
 }
 
-.page, .project, .user {
+.page, .project, .user, .optionbox {
 	width: 47%;
 	vertical-align: top;
 	padding: 15px;
 	margin: 4px 6px;
 }
 
+.theme {
+	border-radius: 3px;
+	width: 25%;
+	text-align: center;
+	margin: 4px 10px;
+	padding: 15px;
+}
 
-.page:hover, .project:hover, .user:hover {
+.theme:hover {
+	cursor: pointer;
+}
+
+.active {
+	border: 5px solid #FF1493;
+}
+
+
+.page:hover, .project:hover, .user:hover, .theme:hover {
 	-webkit-box-shadow: 2px 2px 10px 0px rgba(50, 50, 50, 0.74);
 	-moz-box-shadow:    2px 2px 10px 0px rgba(50, 50, 50, 0.74);
 	box-shadow:         2px 2px 10px 0px rgba(50, 50, 50, 0.74);
@@ -237,7 +261,7 @@ li:hover, button:hover {
 	margin-top: 8px;
 }
 
-.page>p, .project>p, .user>p {
+.page>p, .project>p, .user>p, .optionbox>p {
 	font-size: 15px;
 	margin: 1px 4px;
 }
@@ -320,9 +344,9 @@ button:hover, .skill-delete:hover {
     li {
     	display: inline-block;
     	text-align: center;
-    	font-size: 13px;
-    	width: 13%;
-    	margin: 0px 5px;
+    	font-size: 14px;
+    	width: 16%;
+    	margin: 3px 5px;
     }
 
     #right-view {
