--- a/views/admin-layout.pug
+++ b/views/admin-layout.pug
@@ -6,6 +6,7 @@ html(lang='en')
         include style
     body
         section(class='account-header')
+            img(class='admin-logo', src='/public/img/Paige-sm.png')
             h4 Welcome! 
             p(class='logout')
                 a(href='/logout') Log out
