--- a/views/index.pug
+++ b/views/index.pug
@@ -7,11 +7,11 @@ html(lang='en')
     
     body
         section.index
-            h3 This is a Content Management Site
-            p Log in and start creating your page
-            p Already have an account? 
-                a(class='login', href='/login') Log in here
-            p Create your account. 
-                a(class='signup', href='/signup') Sign up here
+            img(class='logo', src='/public/img/Paige.png')
+            h4(class='paige front') Paige
+            p Create and manage your own portfolio site!
+            a(class='signup', href='/signup') Sign Up
+            br
+            a(class='login', href='/login') Log In
             
         include scripts
