--- a/views/scripts.pug
+++ b/views/scripts.pug
@@ -6,3 +6,4 @@ script(src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.min.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/react-router/4.0.0-0/react-router.min.js')
 script(src='https://cdnjs.cloudflare.com/ajax/libs/fetch/1.0.0/fetch.min.js')
+script(src='https://cdnjs.cloudflare.com/ajax/libs/react-quill/0.4.1/react-quill.min.js')
